fix: fixing alignment issue on navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 .Slider{
   background-image: url('./assets/booklimages/homepage/black-woman-with-suitcase-airport1.jpg');
 }
+.header{
+  width: 1179.7px;
+          height: 78.3px;
+          position: absolute;
+          background: linear-gradient(
+            180deg,
+            #026052 0%,
+            rgba(0, 0, 0, 0.15) 100%
+          );
+          border-radius: 17px;
+          backdrop-filter: blur(40px);
+}
